# Miyu

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  设计方案.md
knowledge-base/3. 日用Arch Linux的常见问题/: 怎么用命令行重命名文件.md  系统字体不对怎么办.md  终端运行btrfs-assistant打不开窗口怎么办，报错段错误.md  终端运行btrfs-assistant打不开窗口怎么办，提示没有权限，但是已经sudo了.md
knowledge-base/4. Linux玩游戏相关/: Linux玩鸣潮.md
knowledge-base/5 shorin-arch-setup相关/: shorin的Niri配置的快捷键配置.md  shorin的配置的切换输入法的快捷键.md
prompts/: miyu_persona_export.md.age
src/: alarm.rs  cli.rs  clipboard.rs  config.rs  config_tui.rs  default_kb.rs  default_models.rs  diff_config.rs  diff_display.rs  i18n.rs  main.rs  models_cache.rs  paths.rs  plugin_manager.rs  prompts.rs  token_estimate.rs
src/agent/: compact.rs  mod.rs  overflow.rs
src/llm/: openai_compatible.rs
src/memes/miyu/: index.json
src/memory/: mod.rs
src/plugin/: mod.rs  registry.rs  traits.rs
src/plugin/builtin/: archlinux.rs  man.rs  (+18 more)
src/prompts/: linux-input-method-diagnose.md  miyu.md
src/render/: mod.rs  wait_spinner.rs
src/scripts/: crack-search  index.json  procusage
src/shell/: bash.rs  fish.rs  mod.rs  zsh.rs
src/state/: conversation_db.rs  mod.rs  usage.rs
src/tools/: archlinux.rs  caniplayonlinux_query.rs  clipboard.rs  deep_diagnose.rs  deep_research.rs  deepseek_status.rs  default_tools.rs  edit_replace.rs  knowledge_base.rs  linux_game.rs  load_tools.rs  memes.rs  memory.rs  mod.rs  package_advisor.rs  protondb_query.rs  registry.rs  scripts.rs  skills.rs  subagent_runner.rs  tool_descriptions.rs  vision.rs  web.rs  web_images.rs  write.rs  xuanxue.rs
(+72 files in other folders)
